syntax = "proto3";
package cosmos.token.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/token/types";


// Params defines the parameters for the bank module.
message Params {
    option (gogoproto.equal)            = true;
    option (gogoproto.goproto_stringer)       = false;
    uint64  token_cache_size = 1 [(gogoproto.moretags) = "yaml:\"token_cache_size,omitempty\""];
    string new_token_fee = 2
    [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false,(gogoproto.moretags) = "yaml:\"new_token_fee\""];
}

message DisableTokenProposal {
    option (gogoproto.equal)            = false;
    option (gogoproto.goproto_getters)  = false;
    option (gogoproto.goproto_stringer) = false;

    string   title                           = 1;
    string   description                     = 2;
    string   denom                           = 3;
}


// ParameterChangeProposal defines a proposal to change one or more parameters.
message TokenParamsChangeProposal {
    option (gogoproto.goproto_getters)  = false;
    option (gogoproto.goproto_stringer) = false;

    string   title               = 1;
    string   description         = 2;
    string   denom               = 3;
    repeated ParamChange changes = 4 [(gogoproto.nullable) = false];
}

// ParamChange defines an individual parameter change, for use in
// ParameterChangeProposal.
message ParamChange {
    option (gogoproto.goproto_stringer) = false;
    string key      = 2;
    string value    = 3;
}